<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="168dp"
            android:layout_marginBottom="58dp"
            android:text="@string/welcome"
            app:layout_constraintBottom_toTopOf="@+id/button_welcome_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_welcome_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="288dp"
            android:backgroundTint="@color/blue_200"
            android:text="@string/settings"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_welcome_about"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button_welcome_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="154dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="155dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/blue_200"
            android:text="@string/about"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button_welcome_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_welcome_start" />

        <Button
            android:id="@+id/button_welcome_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/green"
            android:text="@string/start"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button_welcome_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>