<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_settings_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="154dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="136dp"
            android:backgroundTint="@color/green"
            android:text="@string/start"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_settings_norwegian" />

        <Button
            android:id="@+id/button_settings_norwegian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="300dp"
            android:backgroundTint="@color/blue_200"
            android:text="@string/norwegian"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_settings_english"
            app:layout_constraintTop_toBottomOf="@+id/button_settings_15" />

        <Button
            android:id="@+id/button_settings_5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="173dp"
            android:backgroundTint="@color/blue_700"
            android:text="5"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button_settings_english"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_settings_10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_settings_10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/orange"
            android:text="10"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/button_settings_15"
            app:layout_constraintStart_toEndOf="@+id/button_settings_5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/button_settings_15"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="73dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="173dp"
            android:backgroundTint="@color/red"
            android:text="15"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button_settings_norwegian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_settings_10"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_settings_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="300dp"
            android:backgroundTint="@color/blue_200"
            android:text="@string/english"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_settings_norwegian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_settings_5" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="139dp"
            android:layout_marginEnd="173dp"
            android:layout_marginBottom="199dp"
            android:text="@string/choose_language"
            app:layout_constraintBottom_toTopOf="@+id/button_settings_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_settings_10" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="107dp"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="60dp"
            android:text="@string/choose_amount"
            app:layout_constraintBottom_toTopOf="@+id/button_settings_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>