<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="400dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txt_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txt_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="165dp"
        android:layout_marginBottom="135dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/txt_equation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/answer" />

            <TextView
                android:id="@+id/txt_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_main_0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="0"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_main_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="1"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_main_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="2"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_main_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="3"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_main_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="4"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_main_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="5"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_main_6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="6"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_main_7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="7"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_main_8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="8"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_main_9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="9"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_check"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:text="@string/check"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_undo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/undo"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_leave"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_200"
                android:text="@string/leave"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>